# HiPLARM

./: InstallScript  Installation.html  MD5  configure  configure.ac
src/: Makevars  Makevars.in  Mutils.c  Mutils.h  P.c  hiplar_dgeMatrix.c  hiplar_dgeMatrix.h  hiplar_dpoMatrix.c  hiplar_dsyMatrix.c  hiplar_dtrMatrix.c  hiplar_init.c  magma_dgeMatrix.c  magma_dgeMatrix.h  magma_dpoMatrix.c  magma_dsyMatrix.c  magma_dtrMatrix.c  magma_init.c  plasma_dgeMatrix.c  plasma_dsyMatrix.c  util.c
